---
config:
  layout: dagre
  theme: redux-dark-color
---
erDiagram
    device {
        varchar(12) id PK ""
        varchar(15) ip  ""
        text name ""
        text type ""
    }

    workflow_device {
        varchar(12) workflow_id FK ""
        varchar(12) device_id FK ""
    }

    workflow {
        varchar(12) id PK ""
        text name ""
        varchar(12) user_id FK
        int gesture_id
    }

    user {
        varchar(12) id PK ""
        text username UK ""
        text hash ""
        text refresh_token ""
        jsonb face_embedding ""
    }

    user ||--o{ workflow: "  "
    device ||--o{ workflow_device: "  "
    workflow ||--o{ workflow_device: "  "